--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
 html {
   background-color: #c9b5ab;
+  font-family: "PT serif", serif;
+  line-height: 1.5;
+}
+
+h1,
+h2{
+  color: #3f1622;
+  font-family: "PT Sans", sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
