--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,31 @@ html {
 }
 
 h1,
-h2{
+h2 {
   color: #3f1622;
   font-family: "PT Sans", sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
+}
+
+nav ol {
+list-style-type: none;
+}
+
+nav a {
+  color: #8f2440;
+  font-family: "PT Sans", sans-serif;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+img {
+  width: 100%;
+
+}
+
+figcaption {
+  font-style: italic;
+  font-size: 0.8rem;
+  text-align: center;
 }
