--- a/css/main.css
+++ b/css/main.css
@@ -33,3 +33,25 @@ figcaption {
   font-size: 0.8rem;
   text-align: center;
 }
+
+figure + p {
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+blockquote p {
+  font-style: italic;
+  font-size: 1.5rem;
+}
+
+strong {
+  font-weight: normal;
+}
+
+blockquote cite {
+  font-size: 0.8rem;
+}
+
+h2 + ol {
+  list-style-type: lower-greek;
+}
